<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/waiting_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:gravity="center_horizontal"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_waiting_list"
            android:gravity="center"
            android:textSize="@dimen/text_size_medium_small_material"
            android:layout_marginBottom="@dimen/input_bottom"/>

        <ImageButton
            android:id="@+id/refreshd"
            android:layout_alignParentRight="true"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:src="@drawable/ic_refresh_circle_24_dp"
            android:background="@android:color/transparent"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="0dp"
            android:scaleType="fitCenter"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_first"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:layout_marginBottom="@dimen/input_bottom"
            android:layout_marginRight="@dimen/control_inset_material">

            <AutoCompleteTextView
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_first_name"
                android:inputType="textAutoComplete"
                android:imeOptions="actionNext"
                android:nextFocusRight="@+id/last_name"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_last"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:layout_marginBottom="@dimen/input_bottom"
            android:layout_marginLeft="@dimen/control_inset_material">

            <AutoCompleteTextView
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_last_name_wl"
                android:inputType="textAutoComplete"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/date_visit"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/input_bottom">

        <AutoCompleteTextView
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_phone"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/about"
            android:maxLines="1"
            android:singleLine="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/makesure_phone_active"
            android:layout_marginTop="-8dp"
            android:textSize="@dimen/text_size_caption_material"/>

    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/input_layout_city"
        android:layout_marginBottom="@dimen/input_bottom"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:textSize="12sp"
            android:layout_height="wrap_content"
            android:text="@string/prompt_city"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_border_bottom">
            <Spinner
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/prompt_select_city"
                android:layout_marginLeft="-22dp"
                android:backgroundTint="@color/colorAccent"
                android:spinnerMode="dialog"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/input_layout_outlet"
        android:layout_marginBottom="@dimen/input_bottom"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:textSize="12sp"
            android:layout_height="wrap_content"
            android:text="@string/prompt_outlet"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_border_bottom">
            <Spinner
                android:id="@+id/outlet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/prompt_select_outlet"
                android:layout_marginLeft="-22dp"
                android:backgroundTint="@color/colorAccent"
                android:spinnerMode="dialog"
                />
        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_visitor_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/input_bottom">

        <AutoCompleteTextView
            android:id="@+id/visitor_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_visitor_count"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:maxLength="10"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/input_layout_seat"
        android:layout_marginBottom="@dimen/input_bottom"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:textSize="12sp"
            android:layout_height="wrap_content"
            android:text="@string/prompt_seat"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_border_bottom">
            <Spinner
                android:id="@+id/seat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/prompt_select_seat"
                android:layout_marginLeft="-22dp"
                android:backgroundTint="@color/colorAccent"
                android:spinnerMode="dialog"
                />
        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/submit_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rectanglebutton"
        android:text="@string/action_submit"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/fontInputBig"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/colorAccent"
        android:layout_marginTop="@dimen/fab_margin"
        android:visibility="invisible"/>

</LinearLayout>