<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:background="#00ffffff">
    <!--android:theme="@android:style/Theme.NoTitleBar"-->

        <LinearLayout
            android:id="@+id/layout"
            android:layout_gravity="center"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:paddingTop="22dp"
            android:layout_marginTop="12dp"
            android:paddingBottom="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="22dp"
            android:layout_marginRight="-10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:text="@string/verify_password"
                android:textSize="@dimen/text_size_medium_material"
                android:textColor="@color/colorBlack"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_16"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/input_bottom">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/input_bottom">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/input_layout_email"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/action_cancel"
                        style="?android:textAppearanceSmall"
                        android:layout_width="wrap_content"
                        android:layout_weight="0.5"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_radius_button_dark"
                        android:layout_marginRight="@dimen/button_inset_vertical_material"
                        android:text="@string/action_cancel"
                        android:textColor="@color/colorWhite"/>

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/next_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:layout_marginLeft="@dimen/button_inset_vertical_material"
                        android:background="@drawable/shape_rectanglebutton"
                        android:text="@string/action_next"
                        android:textColor="@color/colorWhite"/>

                </LinearLayout>

            </LinearLayout>

    </LinearLayout>

</LinearLayout>