<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.cranium.sushiteiapps.activity.AllowLocationActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_centerInParent="true"
            android:background="@drawable/border_radius_background"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:padding="20dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/allow_description"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:gravity="center"
                android:textSize="14sp"
                android:text="@string/allow_location_description"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/allow_description"
                android:layout_marginTop="@dimen/fab_margin"
                android:orientation="horizontal"
                android:gravity="center">
                <Button
                    android:id="@+id/btn_dont_allow"
                    android:textAllCaps="true"
                    android:layout_centerInParent="true"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/button_dont_allow"
                    android:background="@drawable/border_radius_button_dark"
                    android:textColor="@color/colorWhite"
                    android:layout_marginRight="@dimen/fab_margin"
                    />
                <Button
                    android:id="@+id/btn_allow"
                    android:textAllCaps="true"
                    android:layout_centerInParent="true"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/button_allow"
                    android:background="@drawable/border_radius_button_primary"
                    android:textColor="@color/colorWhite"
                    />
            </LinearLayout>

            <!--</RelativeLayout>-->

        </LinearLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
